--- a/build.yaml
+++ b/build.yaml
@@ -1,8 +1,11 @@
 repositories:
   remote:
    - http://repo1.maven.org/maven2
+   - https://stocksoftware.jfrog.io/stocksoftware/public
 
 artifacts:
+  idea_codestyle: au.com.stocksoftware.idea.codestyle:idea-codestyle:xml:1.13
+
   javax_annotation: org.realityforge.javax.annotation:javax.annotation:jar:1.0.0
 
   getopt4j: org.realityforge.getopt4j:getopt4j:jar:1.2
