--- a/build.yaml
+++ b/build.yaml
@@ -15,3 +15,5 @@ artifacts:
   snakeyaml: org.yaml:snakeyaml:jar:1.24
 
   gir: org.realityforge.gir:gir-core:jar:0.08
+
+  guiceyloops: org.realityforge.guiceyloops:guiceyloops:jar:0.98
