--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,19 @@ jdk:
   - oraclejdk8
 rvm:
   - 2.3.1
+before_install:
+  - |
+    if [ "${TRAVIS_OS_NAME}" = "osx" ]; then
+      OS=darwin
+    else
+      sysctl kernel.unprivileged_userns_clone=1
+      OS=linux
+    fi
+    BAZEL_VERSION=$(cat ".bazelversion")
+    wget -O install.sh "https://github.com/bazelbuild/bazel/releases/download/${BAZEL_VERSION}/bazel-${BAZEL_VERSION}-installer-${OS}-x86_64.sh"
+    chmod +x install.sh
+    ./install.sh --user
+    rm -f install.sh
 install:
   - rvm use 2.3.1
   - gem install bundler
