--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 # Lock down dist to ensure that builds run on a distribution that supports oraclejdk8
 dist: trusty
-language: ruby
+# Since Bazel 0.25, PY3 is the default Python version. Make sure Travis has it.
+language: python3
 jdk:
   - oraclejdk8
 rvm:
