--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,12 @@ before_install:
       OS=linux
     fi
     BAZEL_VERSION=$(cat ".bazelversion")
-    wget -O install.sh "https://github.com/bazelbuild/bazel/releases/download/${BAZEL_VERSION}/bazel-${BAZEL_VERSION}-installer-${OS}-x86_64.sh"
-    chmod +x install.sh
-    ./install.sh --user
-    rm -f install.sh
+    BAZELISK_VERSION=v1.0
+    if [ ! -d "${HOME}/bin" ]; then
+      mkdir "${HOME}/bin"
+    fi
+    wget -O "${HOME}/bin/bazel" "https://github.com/bazelbuild/bazelisk/releases/download/${BAZELISK_VERSION}/bazelisk-${OS}-amd64"
+    chmod +x "${HOME}/bin/bazel"
 install:
   - rvm use 2.3.1
   - gem install bundler
