--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_install:
     wget -O "${HOME}/bin/bazel" "https://github.com/bazelbuild/bazelisk/releases/download/${BAZELISK_VERSION}/bazelisk-${OS}-amd64"
     chmod +x "${HOME}/bin/bazel"
 install:
+  - rvm install ruby-2.3.1
   - rvm use 2.3.1
   - gem install bundler
   - bundle install
