--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ jdk:
 rvm:
   - 2.7.2
 before_install:
+- rvm install ruby-2.7.2
+- rvm use 2.7.2
   - |
     if [ "${TRAVIS_OS_NAME}" = "osx" ]; then
       OS=darwin
@@ -22,6 +24,8 @@ before_install:
     wget -O "${HOME}/bin/bazel" "https://github.com/bazelbuild/bazelisk/releases/download/${BAZELISK_VERSION}/bazelisk-${OS}-amd64"
     chmod +x "${HOME}/bin/bazel"
 install:
+- rvm install ruby-2.7.2
+- rvm use 2.7.2
   - gem install bundler
   - bundle install
 script: buildr clean package
